--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="card">
                 <img src="img/suite/Table de fred 06 11 2022.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <a href="#"> Title</a>                    
+                    <a href="#"> Title</a>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
                     </p>
                 </div>
@@ -117,7 +117,7 @@
             <div class="card">
                 <img src="img/suite/Table de fred 06 11 2022-2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <a href="#"> Title</a>                    
+                    <a href="#"> Title</a>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                         additional content. This card has even longer content than the first to show that equal height
                         action.</p>
@@ -141,7 +141,7 @@
 
     <div class="contact" id="contact">
         <h2>Contact</h2>
-        <div class="container mx-auto">
+        <div class="article-content">
             <div class="">
                 <label for="exampleFormControlInput1" class="form-label mt-3">Name</label>
                 <input class="form-control form-control-sm" type="text" placeholder="Full Name"
@@ -160,10 +160,18 @@
     </div>
     <div class="footer">
         <div class="address">
-<p>Adress: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, ex?</p>
-<p>Tele: 0123456789</p>
-<p>Email: name@example.com</p>
+            <div class="address-text">
+                <p>Adress: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, ex?</p>
+                <p>Tele: 0123456789</p>
+                <p>Email: name@example.com</p>
+            </div>
+
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92923.35963507356!2d5.3706752!3d43.296358399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9bfa4cd43ab23%3A0xe9c5b784e9983437!2zQnJpY28gRMOpcMO0dA!5e0!3m2!1sen!2sfr!4v1675770515631!5m2!1sen!2sfr"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+
 
         <div class="menue-footer">
             <a href="#accuile"> Accuile</a>
